# reed-solomon-novelpoly

./: .concourse.yml  .gitignore  .rustfmt.toml  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
benches/: criterion.rs  iai.rs
cxx/: .gitignore  Makefile  RSErasureCode.c  RSErasureCode.h  main.c
fuzzit/: Cargo.toml
fuzzit/src/: main.rs
reed-solomon-benches/: Cargo.toml  README.md
reed-solomon-benches/benches/: criterion.rs  iai.rs
reed-solomon-benches/src/: lib.rs  main.rs
reed-solomon-benches/src/naive/: mod.rs
reed-solomon-gao-mateer/: Cargo.toml
reed-solomon-gao-mateer/src/: gao_mateer.rs  lib.rs
reed-solomon-novelpoly/: Cargo.toml  README.md  build.rs  inc_gen_field_tables.rs
reed-solomon-novelpoly-fuzzit/: .gitignore  Cargo.toml
reed-solomon-novelpoly-fuzzit/src/: additive_mpy.rs  afft.rs  inverse_afft.rs  main.rs  reconstruct.rs  roundtrip.rs
reed-solomon-novelpoly/cxx/: RSErasureCode.c
reed-solomon-novelpoly/src/: cxx.rs  errors.rs  f2e16.rs  lib.rs  shard.rs
reed-solomon-novelpoly/src/field/: f256.rs  f2e16.rs  inc_afft.rs  inc_encode.rs  inc_log_mul.rs  inc_reconstruct.rs  mod.rs
reed-solomon-novelpoly/src/field/faster8/: f256.rs  f2e16.rs  mod.rs
reed-solomon-novelpoly/src/novel_poly_basis/: algorithms.rs  encode.rs  mod.rs  reconstruct.rs  tests.rs  util.rs
reed-solomon-tester/: Cargo.toml  build.rs
reed-solomon-tester/src/: lib.rs
src/: RSErasureCode.c  binaryfield.rs  errors.rs  f2e16.rs  f2e16.tables.rs  f2e16.tables.rs-fresh  lib.rs  main.rs  novel_poly_basis.rs  novel_poly_basis_cxx.rs  status_quo.rs  wrapped_shard.rs
src/naive/: mod.rs
