[package]
name = "rs-ec-perf"
version = "0.1.0"
authors = ["Bernhard Schuster <bernhard@ahoi.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
rand = { version = "0.8", features = ["alloc", "small_rng"] }
fs-err = "2"
bindgen = { version = "0.57", optional = true }
cc = { version = "1.0", features = ["parallel"], optional = true }

[dependencies]
reed-solomon-erasure = { version = "4.0", features = ["simd-accel"] }
# fffft = "*"
# ff = "*"
# subtle = "2.4"
# ffaster = { path = "../reed-solomon-erasure", features = ["simd-accel"] }
thiserror = "1.0.23"
# required for randomly dropping shards
rand = { version = "0.8", features = ["alloc"] }
itertools = "0.10"
sha2 = "0.9"
assert_matches = "1"

[dev-dependencies]
iai = "0.1"
criterion = "0.3"

[features]
default = []
cmp-with-cxx = ["cc", "bindgen"]
status-quo = []


[profile.bench]
debug = true

[profile.dev]
debug = true

[profile.release]
debug = true

[[bench]]
name = "iai"
harness = false
bench = true

[[bench]]
name = "criterion"
harness = false
bench = true


[workspace]
members = [
     "fuzzit"
]
