[package]
name = "rs-ec-perf"
version = "0.1.0"
authors = ["Bernhard Schuster <bernhard@ahoi.io>"]
edition = "2018"

[build-dependencies]
derive_more = { version = "0.99.0", default-features = false, features = ["add_assign", "add"] }
rand = { version = "0.8", features = ["alloc", "small_rng"] }
fs-err = "2"
bindgen = { version = "0.57", optional = true }
cc = { version = "1.0", features = ["parallel"], optional = true }

[dependencies]
reed-solomon-erasure = { version = "4.0", features = ["simd-accel"], optional = true }

derive_more = { version = "0.99.0", default-features = false, features = ["add_assign", "add"] }
constuneval = "0.1.0"

thiserror = "1.0.23"

# required for randomly dropping shards
rand = { version = "0.8", features = ["alloc", "small_rng"] }
itertools = "0.10"
sha2 = "0.9"
assert_matches = "1"

[dev-dependencies]
iai = "0.1"
criterion = "0.3"

[features]
default = []
cmp-with-cxx = ["cc", "bindgen"]
status-quo = ["reed-solomon-erasure"]

[profile.bench]
debug = true

[profile.dev]
debug = true

[profile.release]
debug = true

[[bench]]
name = "iai"
harness = false
bench = true

[[bench]]
name = "criterion"
harness = false
bench = true


[workspace]
members = [
     "fuzzit"
]
