cargo-features = ["named-profiles"]

[package]
name = "fuzzit"
version = "0.1.0"
authors = ["Bernhard Schuster <bernhard@ahoi.io>"]
edition = "2018"

[dependencies]
thiserror = "1.0.23"
rand = { version = "0.8", features = ["alloc", "small_rng"] }
itertools = "0.10"
sha2 = "0.9"
honggfuzz = "=0.5.54"
rs = { package = "rs-ec-perf", path = ".." }
