[package]
name = "fuzzit"
version = "0.1.0"
authors = ["Bernhard Schuster <bernhard@ahoi.io>"]
edition = "2018"
publish = false

[dependencies]
thiserror = "1.0.23"
rand = { version = "0.8", features = ["alloc", "small_rng"] }
itertools = "0.10"
sha2 = "0.9"
honggfuzz = "=0.5.54"
arbitrary = { version = "1", features = ["derive"] }
rs = { package = "rs-ec-perf", path = ".." }
