[package]
name = "fuzzit"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
publish = false

[dependencies]
honggfuzz = "=0.5.55"
arbitrary = { version = "1", features = ["derive"] }
rstester = { path = "../reed-solomon-tester", package = "reed-solomon-tester" }
novelpoly = { path = "../reed-solomon-novelpoly", package = "reed-solomon-novelpoly", features = [
  "mock",
] }
rand_chacha = "0.3.0"
rand = "0.8.3"

[[bin]]
name = "fuzz_reconstruct"
path = "src/reconstruct.rs"

[[bin]]
name = "fuzz_roundtrip"
path = "src/roundtrip.rs"

[[bin]]
name = "fuzz_additive_mpy"
path = "src/additive_mpy.rs"

[[bin]]
name = "fuzz_afft"
path = "src/afft.rs"
