[package]
name = "reed-solomon-novelpoly"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
repository = "https://github.com/paritytech/reed-solomon-novelpoly"
edition = "2021"
license = "Apache-2.0 AND MIT"
description = "An implementation of a reed solomon code / encoder / decoder with complexity `O(n lg(n))`"
keywords = ["reed-solomon", "erasure", "encoding", "algorithm"]
readme = "../README.md"

[build-dependencies]
derive_more = { version = "0.99.0", default-features = false, features = [
  "add_assign",
  "add",
] }
fs-err = "2.5.0"
bindgen = { version = "0.69.2", optional = true }
cc = { version = "1.0.67", features = ["parallel"], optional = true }

[dependencies]
static_init = "1"

thiserror = "1.0.23"
derive_more = { version = "0.99.0", default-features = false, features = [
  "add_assign",
  "add",
] }

[dev-dependencies]
itertools = "0.12"
reed-solomon-tester = { path = "../reed-solomon-tester" }
rand = { version = "0.8.3", features = ["alloc", "small_rng"] }
assert_matches = "1.5.0"
quickcheck = { version = "1.0.3", default-features = false }

[features]
default = []
with-alt-cxx-impl = ["cc", "bindgen"]
# enable the small field, experimental support
f256 = []
avx = []
