[package]
name = "reed-solomon-tester"
version = "0.0.1"
authors = ["Bernhard Schuster <bernhard@ahoi.io>"]
edition = "2018"
publish = false

[build-dependencies]
rand = { version = "0.8", features = ["alloc", "small_rng"] }
fs-err = "2"

[dependencies]
rand = { version = "0.8", features = ["alloc", "small_rng"] }
itertools = "0.10"
assert_matches = "1"
